--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <h1><font color="#3CB371">コンテナ・CI/CD講座へようこそ！</font></h1>
     <h3>
       <font color="#3CB371"
-        >このページはECS環境で動いています。blue/greenアップデート後</font
+        >このページはECS環境で動いています。blue/greenアップデート後、10分待機、手動デプロイ</font
       >
     </h3>
   </body>
